src/test/ui/issues/10000-19999/issue-16149.rs
extern {
    static externalValue: isize;
}

fn main() {
    let boolValue = match 42 {
        externalValue => true,
        //~^ ERROR match bindings cannot shadow statics
        _ => false
    };
}
